--- a/apps/exercise_area/templates/exercise.html
+++ b/apps/exercise_area/templates/exercise.html
@@ -12,7 +12,7 @@ active
 
 {% block css %}
 
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" href="{% static 'css/exercise_style.css' %}">
 
 {% endblock css %}
 
@@ -79,7 +79,10 @@ active
         </button>
       </div>
       <div class="modal-body">
-        <h6>題號</h6>
+        <div id= 'ansTopContainer' style='margin-bottom:0.2rem;'>
+          <a href='#' id='answer-previous' class='previous'><i class="fa-solid fa-arrow-left"></i></a>
+        </div>
+        <h6><strong>題號</strong></h6>
         <table id='questionNumTable'>
           <tr>
               <td><a href='#' class='question-number'>1</a></td>
@@ -110,13 +113,32 @@ active
   <div class="modal-dialog modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="ansQuestionNumModalLabel">Modal title</h5>
+        <h6 class="modal-title" id="ansQuestionNumModalLabel">Modal title</h6>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        <div id= 'queNumTopContainer' class='container'>
+          <div class='d-flex'>
+            <div id='prevPageContainer'>
+              <a href='#' id='question-number-previous' class='previous'><i class="fa-solid fa-arrow-left"></i></a>
+            </div>
+            <div id='uploadContainer' class='ml-auto'>
+              <label for="fileInput" id="uploadIcon">
+                <a href='#'><i class="fa-solid fa-file-arrow-up upload"></i></a>
+              </label>
+              <input type="file" id="fileInput" accept=".txt" style="display: none"> <!-- 測試時只先接受.txt檔, 正式的話就只接受筆記板的那個檔 -->
+            </div>
+          </div>
+          <div id='searchContainer' class='search-container'>
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <input id='searchInput' type='text' placeholder='搜尋'>
+          </div>
+        </div>
+        <div id='displayFileContainer' class='container' style='margin-top:0.3rem;'>
+          
+        </div>
       </div>
     </div>
   </div>
@@ -129,13 +151,20 @@ active
 
 <script>
   var SUBJECT = undefined;
-
+  var DATE = undefined; // 跟著modal title日期的全域變數, regularQuestion函數的date局域變數與此無關
+  var NUMBER = undefined;
+  var PERIOD = undefined; // regularQuestion函數的period局域變數與此無關
+  
   $(function(){
     subjectBtn();
     oneBtn();
     regularQuestion();
+    regularAnswer();
     answerArea();
     ansQuestionNum();
+    prevPage();
+    upLoad();
+    search();
   })
 
   function subjectBtn(){ 
@@ -147,7 +176,7 @@ active
         type: 'post',
         data: {
           'purpose': 'makeTags',
-          'SUBJECT': SUBJECT
+          'subject': SUBJECT
         },
         dataType: 'JSON',
         success : function(res){
@@ -231,15 +260,42 @@ active
       url:'/exercise/',
       type:'post',
       data:{
-        'purpose': 'regular',
-        'SUBJECT': SUBJECT,
+        'purpose': 'regularQuestion',
+        'subject': SUBJECT,
         'date': date,
         'fileName': fileName,
         'period': period,
       },
       success: function(res){
         if (res.status){
-          window.location.href = '/download_pdf/?path=' + encodeURIComponent(res.pdf_path);
+          window.location.href = '/download_pdf/?path=' + encodeURIComponent(res.file_path);
+        }else{
+          alert(res.error)
+        }
+      }
+    })
+  })
+}
+
+function regularAnswer(){
+  $('#displayFileContainer').on('click', '.answer-file', function(){
+    let fileName = $(this).text();
+
+    $.ajax({
+      url:'/exercise/',
+      type:'post',
+      data:{
+        'purpose': 'regularAnswer',
+        'subject': SUBJECT,
+        'date': DATE,
+        'number': NUMBER,
+        'period': PERIOD,
+        'fileName': fileName,
+      },
+      success: function(res){
+        if (res.status){
+          console.log('JJJJ')
+          window.location.href = '/download_answer_panel/?path=' + encodeURIComponent(res.file_path);
         }else{
           alert(res.error)
         }
@@ -250,7 +306,10 @@ active
         
 function answerArea(){
   $('#questions-container').on('click', '.regular-answer', function(){
-    $('#answerModalLabel').text($(this).attr('date'));
+    DATE = $(this).attr('date');
+    PERIOD = $(this).closest('[period]').attr('period');
+    let prevModalTitle = $('#exerciseModalTitle').text()
+    $('#answerModalLabel').text(prevModalTitle +' - '+ DATE);
     $('#answerModal').modal('show');
     $('#exerciseModal').modal('hide');
   })
@@ -258,11 +317,130 @@ function answerArea(){
 
 function ansQuestionNum(){
   $('#questionNumTable').on('click', '.question-number', function(){
-    console.log('!')
-    $('#questionNumModal').modal('show');
+    NUMBER = $(this).text()
+    let prevModalTitle = $('#answerModalLabel').text()
+    $('#ansQuestionNumModalLabel').text(prevModalTitle + ' - ' + NUMBER)
+    $('#answerModal').modal('hide');
+
+    $.ajax({
+      url:'/exercise/',
+      type:'post',
+      data:{
+        'purpose':'openQuestionNumModal',
+        'number': NUMBER,
+        'date': DATE,
+        'period': PERIOD,
+        'subject': SUBJECT,
+      },
+      dataType:'JSON',
+      success: function(res){
+        if(res.status){
+          /* 創建該題號資料夾裡的DOM標籤 */
+
+          // 先把原本已有的刪除
+          $('#displayFileContainer').empty();
+
+          // 開始建DOM標籤
+          $.each(res.file_list, function(index, fileName){
+            let divRow = $('<div>').attr('class', 'row');
+            let divGrid = $('<div>').attr('class', 'col-sm-12');
+            let notePanelIcon = $('<i>').attr('class', 'fa-solid fa-pen-to-square');
+            let a = $('<a>').attr({'href': '#', 'class': 'answer-file', 'like': '', 'dislike': '',}).text(fileName);
+            divGrid.append(notePanelIcon);
+            divGrid.append(a);
+            divRow.append(divGrid);
+            $('#displayFileContainer').append(divRow);
+          })
+          $('#questionNumModal').modal('show');
+        }else{
+          alert(res.error)
+        }
+      }
+    })
   })
 }
 
+function prevPage(){
+  $('#queNumTopContainer').on('click', '#question-number-previous', function(){
+    $('#questionNumModal').modal('hide');
+    $('#answerModal').modal('show');
+  });
+
+  $('#ansTopContainer').on('click', '#answer-previous', function(){
+    $('#answerModal').modal('hide');
+    $('#exerciseModal').modal('show');
+  });
+}
+
+function upLoad(){
+  // 點擊圖標就能上傳檔案的功能
+  $('#uploadIcon').on('click', function() {
+    $('#fileInput').click();
+  });
+  
+  $('#fileInput').on('change', function() {
+    const file = this.files[0];
+    if (file.type === 'text/plain') {
+      uploadFile(file);
+    } else {
+      alert('Please select a .txt file');
+    }
+  });
+}
+
+function uploadFile(file) {
+  const formData = new FormData(); // a built-in class in js which is key-value pair inside for coveniently using when uploading file
+  formData.append('file', file);
+  formData.append('subject', SUBJECT);
+  formData.append('number', NUMBER);
+  formData.append('date', DATE);
+  formData.append('period', PERIOD);
+
+  $.ajax({
+    url: '/upload_file/', 
+    type: 'POST',
+    data: formData,
+    processData: false,
+    contentType: false,
+    success: function(res) {
+      if(res.status){
+      alert(res.message);
+      let divRow = $('<div>').attr('class', 'row');
+      let divGrid = $('<div>').attr('class', 'col-sm-12');
+      let notePanelIcon = $('<i>').attr('class', 'fa-solid fa-pen-to-square');
+      let a = $('<a>').attr({'href': '#', 'class': 'answer-file', 'like': '', 'dislike': '',}).text(res.file_name);
+      divGrid.append(notePanelIcon);
+      divGrid.append(a);
+      divRow.append(divGrid);
+      $('#displayFileContainer').append(divRow);
+    }else{
+      alert(res.error);
+    }
+  }
+  });
+}
+
+function filter() {
+  // Get the search input value
+  let searchText = $('#searchInput').val().toLowerCase();
+
+  // Loop through each file link
+  $('#displayFileContainer a').each(function() {
+      // Get the text content of the file link and convert it to lowercase
+      let text = $(this).text().toLowerCase();
+
+      // Show or hide the file link based on whether the search text is found in the link text
+      if (text.includes(searchText)) {
+          $(this).parent().parent().show();
+      } else {
+          $(this).parent().parent().hide();
+      }
+  });
+}
+
+function search(){
+  $('#searchInput').on('input', filter);
+}
 </script>
 
 {% endblock js %}
